--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -3,8 +3,13 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Biovana Sustentable
-        </title>
+        <title>Biovana Sustentable</title>
+        <meta name="Biovana sustentable" content="cosmetica natural, distribuidores, shampoo solido"/>
+        <meta name="description" content="Biovana Sustentable, Cosmetica natural - Empresa familiar tienda de articulos para el cuidado personal y del medio ambiente &#169 BiovanaSustentable2022. Todos los derechos reservados.">
+        <meta name="author" content="Diego Escudero"/>
+        <meta name="copyright" content="About Us - Biovana Sustentable"/>
+        <meta name="robots" content="index"/>
+        <meta name="robots" content="follow"/>
         <!--Bootstrap-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <!--Mi style-->
@@ -40,59 +45,63 @@
             </div>
         </nav>
     <!--fin de nav-->
-    <br><br><br><br><br><br>
-    <main id="main-nosotros">
-        <h3 class="text-center">Sobre nosotras!</h3>
-        <section class="py-4 mx-5 d-inline-block col-lg-9"  >    
-            <div class="card mb-3 col-sm-12 col-md-12 col-lg-12" id="main-section-div" >
-                <div class="row g-0">
-                    <div class="col-md-8">
-                        <img src="../img/nosotras.webp" class="img-fluid rounded-start" alt="...">
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card-body p-5">
-                            <h5 class="card-title">Nuestro proyecto</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure minima corporis quidem reiciendis, ipsam explicabo magni cum facere! Repudiandae, nesciunt! Numquam laboriosam rem vitae ut necessitatibus labore aliquam dolor. Debitis?</p>
+    <!--inicio de main-->
+        <br>
+        <main id="main-nosotros">
+            <h3 class="text-center">Sobre nosotras!</h3>
+            <section class="py-5 col-md-12" >
+                <div class="card mb-3 col-sm-12 col-md-8 col-lg-12 col-xl-12" id="main-section-div" >
+                    <div class="row g-0 " >
+                        <div class="col-md-12 col-lg-12 col-xl-8">
+                            <img src="../assets/img/nosotras.webp" class="img-fluid rounded-start" alt="imagen de nosotras">
+                        </div>
+                        <div class="col-md-12 col-xl-4">
+                            <div class="card-body p-4">
+                                <h5 class="card-title" id="titulo">Nuestro proyecto</h5>
+                                <p class="card-text" id="text">Somos madre e hija creadoras de este emprendimiento sustentable y respetuoso con el medio ambiente. La idea surgió en medio de una pandemia en la cual, buscando un proyecto que nos apasione, comenzamos a ver cuáles eran los productos de la naturaleza más nutritivos para nuestro cuerpo y así poder llevarlo a cada hogar dispuesto a brindar su granito de arena por la tierra.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
-    </main>
-
+            </section>
+        </main>
+    <!--fin de main-->
     <!--inicio footer-->
         <footer id="footer">
             <div class="container-fluid d-flex justify-content-evenly mt-5 w-100 p-4">
                 <div class="row p3 text-white">
                     <div class="col-xs-12 col-md-6 col-lg-3">
                         <p class="h5 text-black mb-3">Seguinos</p>
-                    <div class="mb-2">
-                        <a class="text-decoration-none" id="boton" href="https://www.instagram.com/biovanasustentable/">Instagram</a>
-                    </div>
-                    <div class="mb-2">
-                        <a class="text-decoration-none" id="boton" href="https://www.facebook.com/">Facebook</a>
-                    </div>
+                        <div class="mb-2 d-inline-block ">
+                            <a href="https://www.instagram.com/biovanasustentable/"><img src="../assets/icons/instagram.svg" alt="instagram"></a>
+                        </div>
+                        <div class="mb-2 d-inline-block ">
+                            <a href="https://www.facebook.com/"><img src="../assets/icons/facebook.svg" alt="facebook"></a>
+                        </div>
+                        <div class="mb-2 d-inline-block ">
+                            <a href="https://www.twitter.com"><img src="../assets/icons/twitter.svg" alt="twitter"></a>
+                        </div>
                     </div>  
                     <div class="col-xs-12 col-md-6 col-lg-3">
-                    <p class="h5 text-black mb-3">Links</p>
-                    <div class="mb-2">
-                        <a class="text-decoration-none" id="boton" href="../index.html">Home</a>
-                    </div>
-                    <div class="mb-2">
-                        <a class="text-decoration-none" id="boton" href="tienda.html">Tienda</a>
-                    </div>
-                    <div class="mb-2">
-                        <a class="text-decoration-none" id="boton" href="contactos.html">Contacto</a>
-                    </div>
-                    <div class="mb-2">
-                        <a class="text-decoration-none" id="boton" href="distribuidores.html">Distribuidores</a>
-                    </div>
+                        <p class="h5 text-black mb-3">Links</p>
+                        <div class="mb-2">
+                            <a class="text-decoration-none" id="boton" href="../index.html">Home</a>
+                        </div>
+                        <div class="mb-2">
+                            <a class="text-decoration-none" id="boton" href="tienda.html">Tienda</a>
+                        </div>
+                        <div class="mb-2">
+                            <a class="text-decoration-none" id="boton" href="contactos.html">Contacto</a>
+                        </div>
+                        <div class="mb-2">
+                            <a class="text-decoration-none" id="boton" href="distribuidores.html">Distribuidores</a>
+                        </div>
                     </div>
                     <div class="col-xs-12 col-md-6 col-lg-3">
                         <iframe class="ubicacion" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.534557141162!2d-57.54864128029002!3d-38.03462899908377!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584e106254d7dd3%3A0x756f4ce01c231c91!2sBiovana%20Sustentable!5e0!3m2!1ses!2sar!4v1654704600033!5m2!1ses!2sar" style="border: 0;;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                         </iframe>
                     </div>
-                    <div class="text-black text-center">&#169 BiovanaSustentable2022</div>  
+                    <div class="text-black pt-3 text-center">&#169 BiovanaSustentable2022. Todos los derechos reservados.</div>  
                 </div>
             </div>
         </footer>
