--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -48,7 +48,7 @@
     <!--inicio main-->
         <br><br>
         <main class="main-contact"> 
-            <form action="" class="main-div p-5 col-sm-9 col-md-9 col-lg-6 col-xl-4">
+            <form action="" class="card-header main-div p-5 col-sm-9 col-md-9 col-lg-6 col-xl-4">
                 <h3 class="text-center">Contáctese con nosotros</h3>
                 <div>
                     <div class="mb-3 ">
