--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -61,7 +61,7 @@
                     <img src="../assets/img/canela.webp" class="card-img-top" alt="jabón de canela">
                     <div class="card-body">
                         <h5 class="card-title">Canela</h5>
-                        <p class="card-text">Canela y manzanilla, antioxidante, antinflamatorio, astringente, limpieza profunda, mejora la circulación<br><br>$375</p>
+                        <p class="card-text">Canela y manzanilla, anti-oxidante, anti-inflamatorio, astringente, limpieza profunda, mejora la circulación<br><br>$375</p>
                         <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
                     <img src="../assets/img/lavanda.webp" class="card-img-top" alt="jabón de lavanda">
                     <div class="card-body">
                         <h5 class="card-title">Lavanda</h5>
-                        <p class="card-text">Aromaterapetico, hidritante, antinflamatorio y regenerador, pieles sencibles o dañadas, apto para tatuajes<br><br> $375</p>
+                        <p class="card-text">Aromaterapeutico, hidratante, anti-inflamatorio y regenerador, pieles sencibles o dañadas, apto para tatuajes<br><br> $375</p>
                         <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
@@ -107,7 +107,7 @@
                 <img src="../assets/img/cepillo.webp" class="card-img-top" alt="cepillos de bamboo de distintos colores">
                     <div class="card-body">
                         <h5 class="card-title">Cepillo de Bamboo</h5>
-                        <p class="card-text">El cepillo de bambú es una alternativa que reduce significativamente tu impacto en el medio ambiente!<br><br> $400</p>
+                        <p class="card-text">El cepillo de bambú es una alternativa que reduce significativamente tu impacto en el medio ambiente<br><br> $400</p>
                         <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
