--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
     </div>
     <!--fin carousel-->
     <!--comienzo del main-->
-    <main class="container-fluid">
-      <div class="container-fluid">
-        <h1 class="p-4 text-center biovana">Somos cosmetica natural, somos Biovana Sustentable !</h1> 
+    <main class="container-fluid w-100 m-0 p-0">
+      <div class="container-fluid div-h1">
+        <h1 class="p-2 text-center biovana">Somos cosmetica natural, somos Biovana Sustentable!</h1> 
       </div>
       <section class="py-4 col-md-12" >
         <div class="card mb-3 col-sm-12 col-md-8 col-lg-12 col-xl-12" id="main-section-div" >
@@ -100,32 +100,32 @@
               <img src="./assets/img/produ.webp" class="img-fluid rounded-start" alt="imagen produciendo">
             </div>
             <div class="col-md-12 col-xl-4">
-              <div class="card-body p-5">
+              <div class="card-body p-4 p-md-3">
                 <h5 class="card-title" id="titulo">Proceso de producción</h5>
-                <p class="card-text" id="text">Nuestros productos son 100% naturales, libre del maltrato animal, gluten y parabenos, el proceso es casero y fue refinado hasta encontrar una receta acorde con la exigencia de quien decida dejar el uso de productos industriales.</p>
+                <p class="card-text" id="text">Nuestros productos son 100% naturales, libre del maltrato animal, gluten y parabenos, nuestras materias primas de alta calidad y finamente seleccionados, en constante capacitación y dedicación, las recetas fueron refinadas hasta en contrar el equilibrio deseado. </p>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <div class="div-icon">
-        <div class="div-item col-lg-2 col-md-2 col-sm-4">
+      <div class="div-icon container-fluid">
+        <div class="div-item col-lg-2 col-md-2 col-sm-2">
           <img src="./assets/icons/libre-de-crueldad.png" class="icon">
           <p class="icon-text">No testeado</p>
         </div>
-        <div class="div-item col-lg-2 col-md-2 col-sm-4">
+        <div class="div-item col-lg-2 col-md-2 col-sm-2">
           <img src="./assets/icons/gluten-free.png" class="icon">
           <p class="icon-text">Sin T.A.C.C.</p>
         </div>
-        <div class="div-item col-lg-2 col-md-2 col-sm-4">
+        <div class="div-item col-lg-2 col-md-2 col-sm-2">
           <img src="./assets/icons/vegano.png" class="icon">
           <p class="icon-text">Vegano</p>
         </div>
-        <div class="div-item col-lg-2 col-md-2 col-sm-4">
+        <div class="div-item col-lg-2 col-md-2 col-sm-2">
           <img src="./assets/icons/natural.png" class="icon">
           <p class="icon-text">Organico</p>
         </div>
-        <div class="div-item col-lg-2 col-md-2 col-sm-4">
+        <div class="div-item col-lg-2 col-md-2 col-sm-2">
           <img src="./assets/icons/libre-de-parabeno.png" class="icon">
           <p class="icon-text">Sin parabenos</p>
         </div>
