--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -47,9 +47,9 @@
     <!--fin de nav-->
     <!--inicio de main-->
         <br>
-        <main id="main-nosotros">
+        <main class="container-fluid" id="main-nosotros">
             <h3 class="text-center">Sobre nosotras!</h3>
-            <section class="py-5 col-md-12" >
+            <section class="container-fluid py-4 col-md-12" id="sec-nosotros">
                 <div class="card mb-3 col-sm-12 col-md-8 col-lg-12 col-xl-12" id="main-section-div" >
                     <div class="row g-0 " >
                         <div class="col-md-12 col-lg-12 col-xl-8">
@@ -57,8 +57,8 @@
                         </div>
                         <div class="col-md-12 col-xl-4">
                             <div class="card-body p-4">
-                                <h5 class="card-title" id="titulo">Nuestro proyecto</h5>
-                                <p class="card-text" id="text">Somos madre e hija creadoras de este emprendimiento sustentable y respetuoso con el medio ambiente. La idea surgió en medio de una pandemia en la cual, buscando un proyecto que nos apasione, comenzamos a ver cuáles eran los productos de la naturaleza más nutritivos para nuestro cuerpo y así poder llevarlo a cada hogar dispuesto a brindar su granito de arena por la tierra.</p>
+                            <h5 class="card-title" id="titulo">Nuestro proyecto</h5>
+                            <p class="card-text" id="text">Somos madre e hija creadoras de este emprendimiento sustentable y respetuoso con el medio ambiente. La idea surgió en medio de una pandemia en la cual, buscando un proyecto que nos apasione, comenzamos a ver cuáles eran los productos de la naturaleza más nutritivos para nuestro cuerpo y así poder llevarlo a cada hogar dispuesto a brindar su granito de arena por la tierra.</p>
                             </div>
                         </div>
                     </div>
