--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -19,7 +19,7 @@
     <!--inicio de nav-->
         <nav class="navbar navbar-expand-lg bg-nav" id="navbar">
             <div class="container-fluid">
-                <a class="navbar-brand logo" href="../index.html">Biovana Sustentable</a>
+                <img src="../assets/img/logo.webp" id="logo2" alt="">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon" ></span>
                 </button>
