--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <!--comienzo del main-->
     <main class="container-fluid w-100 m-0 p-0">
       <div class="container-fluid div-h1">
-        <h1 class="p-2 text-center biovana">Somos cosmetica natural, somos Biovana Sustentable!</h1> 
+        <h1 class="p-2 text-center">Somos cosmetica natural, somos Biovana Sustentable!</h1> 
       </div>
       <section class="py-4 col-md-12" >
         <div class="card mb-3 col-sm-12 col-md-8 col-lg-12 col-xl-12" id="main-section-div" >
