--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -19,7 +19,7 @@
     <!--inicio de nav-->
         <nav class="navbar navbar-expand-lg bg-nav" id="navbar">
             <div class="container-fluid">
-                <img src="../assets/img/logo.webp" id="logo2" alt="">
+                <a class="navbar-brand logo" href="../index.html">Biovana Sustentable</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon" ></span>
                 </button>
@@ -74,11 +74,11 @@
     <!--fin de main-->
     <!--inicio footer-->
         <footer id="footer">
-            <div class="container-fluid d-flex justify-content-evenly mt-5 w-100 p-4">
-                <div class="row p3 text-white col-md-6">
-                    <div class="col-xs-4 col-sm-6 col-md-6 col-lg-4">
+            <div class="container-fluid d-flex justify-content-evenly mt-5 w-100 p-3">
+                <div class="row p-3 text-white">
+                    <div class="col-6 col-sm-6 col-md-6 col-lg-4">
                         <p class="h5 text-black mb-3">Seguinos</p>
-                        <div class="mb-2 d-inline-block ">
+                        <div class="mb-2 d-inline-block">
                             <a href="https://www.instagram.com/biovanasustentable/"><img src="../assets/icons/instagram.svg" alt="instagram"></a>
                         </div>
                         <div class="mb-2 d-inline-block ">
@@ -87,27 +87,32 @@
                         <div class="mb-2 d-inline-block ">
                             <a href="https://www.twitter.com"><img src="../assets/icons/twitter.svg" alt="twitter"></a>
                         </div>
+                        <div class="mb-2 d-inline-block map-icon">
+                            <a href="https://www.google.com/maps/place/Biovana+Sustentable/@-38.034633,-57.544414,15z/data=!4m5!3m4!1s0x0:0x756f4ce01c231c91!8m2!3d-38.0346333!4d-57.5444141?hl=es" class="map-icon" style="border: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"><img src="../assets/icons/map.svg" alt="mapa"></a>
+                        </div>
                     </div>  
-                <div class="col-xs-4 col-sm-6 col-md-6 col-lg-4">
-                    <p class="h5 text-black mb-3">Links</p>
-                    <div class="mb-2">
-                        <a class="text-decoration-none" id="boton" href="../index.html">Home</a>
+                    <div class="col-6 col-sm-6 col-md-6 col-lg-4">
+                        <p class="h5 text-black mb-3">Links</p>
+                        <div class="mb-2">
+                            <a class="text-decoration-none" id="boton" href="../index.html">Home</a>
+                        </div>
+                        <div class="mb-2">
+                            <a class="text-decoration-none" id="boton" href="tienda.html">Tienda</a>
+                        </div>
+                        <div class="mb-2">
+                            <a class="text-decoration-none" id="boton" href="nosotros.html">Nosotras</a>
+                        </div>
+                        <div class="mb-2">
+                            <a class="text-decoration-none" id="boton" href="distribuidores.html">Distribuidores</a>
+                        </div>
                     </div>
-                    <div class="mb-2">
-                        <a class="text-decoration-none" id="boton" href="tienda.html">Tienda</a>
+                    <div class="col-lg-4">
+                        <iframe class="ubicacion" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.534557141162!2d-57.54864128029002!3d-38.03462899908377!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584e106254d7dd3%3A0x756f4ce01c231c91!2sBiovana%20Sustentable!5e0!3m2!1ses!2sar!4v1654704600033!5m2!1ses!2sar" style="border: 0;;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
                     </div>
-                    <div class="mb-2">
-                        <a class="text-decoration-none" id="boton" href="nosotros.html">Nosotras</a>
-                    </div>
-                    <div class="mb-2">
-                        <a class="text-decoration-none" id="boton" href="distribuidores.html">Distribuidores</a>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <iframe class="ubicacion" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.534557141162!2d-57.54864128029002!3d-38.03462899908377!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584e106254d7dd3%3A0x756f4ce01c231c91!2sBiovana%20Sustentable!5e0!3m2!1ses!2sar!4v1654704600033!5m2!1ses!2sar" style="border: 0;;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-                    </iframe>
-                </div>
-                    <div class="text-black pt-3 text-center">&#169 BiovanaSustentable2022. Todos los derechos reservados.</div>  
+                    <div class="text-black pt-3 text-center">&#169 BiovanaSustentable2022. 
+                        
+                    </div>  
                 </div>
             </div>
         </footer>
