--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -70,7 +70,7 @@
         <footer id="footer">
             <div class="container-fluid d-flex justify-content-evenly mt-5 w-100 p-4">
                 <div class="row p3 text-white">
-                    <div class="col-xs-12 col-md-6 col-lg-3">
+                    <div class="col-6 col-sm-6 col-md-6 col-lg-4">
                         <p class="h5 text-black mb-3">Seguinos</p>
                         <div class="mb-2 d-inline-block ">
                             <a href="https://www.instagram.com/biovanasustentable/"><img src="../assets/icons/instagram.svg" alt="instagram"></a>
@@ -81,8 +81,11 @@
                         <div class="mb-2 d-inline-block ">
                             <a href="https://www.twitter.com"><img src="../assets/icons/twitter.svg" alt="twitter"></a>
                         </div>
+                        <div class="mb-2 d-inline-block map-icon">
+                            <a href="https://www.google.com/maps/place/Biovana+Sustentable/@-38.034633,-57.544414,15z/data=!4m5!3m4!1s0x0:0x756f4ce01c231c91!8m2!3d-38.0346333!4d-57.5444141?hl=es" class="map-icon" style="border: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"><img src="../assets/icons/map.svg" alt="mapa"></a>
+                        </div>
                     </div>  
-                    <div class="col-xs-12 col-md-6 col-lg-3">
+                    <div class="col-6 col-sm-6 col-md-6 col-lg-4">
                         <p class="h5 text-black mb-3">Links</p>
                         <div class="mb-2">
                             <a class="text-decoration-none" id="boton" href="../index.html">Home</a>
@@ -97,11 +100,11 @@
                             <a class="text-decoration-none" id="boton" href="distribuidores.html">Distribuidores</a>
                         </div>
                     </div>
-                    <div class="col-xs-12 col-md-6 col-lg-3">
+                    <div class="col-lg-4">
                         <iframe class="ubicacion" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.534557141162!2d-57.54864128029002!3d-38.03462899908377!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584e106254d7dd3%3A0x756f4ce01c231c91!2sBiovana%20Sustentable!5e0!3m2!1ses!2sar!4v1654704600033!5m2!1ses!2sar" style="border: 0;;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                         </iframe>
                     </div>
-                    <div class="text-black pt-3 text-center">&#169 BiovanaSustentable2022. Todos los derechos reservados.</div>  
+                    <div class="text-black pt-4 text-center">&#169 BiovanaSustentable2022. Todos los derechos reservados.</div>  
                 </div>
             </div>
         </footer>
